--- a/src/pages/Vendas/styles.css
+++ b/src/pages/Vendas/styles.css
@@ -1,8 +1,11 @@
 .main {
   background: url('../../images/fundo2.jpg') no-repeat;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
   /* background-size: 100%; */
   /* opacity: 0.8; */
-  /* height: 100vh; */
+  height: 50vh;
 }
 
 .main_name {
@@ -12,6 +15,17 @@
   font-weight: 500;
   position: relative;
   top: 10px;
+  margin-left: 10%;
+}
+
+.main_oab {
+  color: white;
+  opacity: 1;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 15px;
+  position: relative;
+  top: -20px;
   margin-left: 10%;
 }
 
@@ -28,6 +42,7 @@
 .main_logo {
   border-radius: 20px;
   position: relative;
+  width: 20%;
   /* float: right; */
   left: 50%;
   /* margin-left: 20opx; n rolou*/
