--- a/src/pages/Vendas/styles.css
+++ b/src/pages/Vendas/styles.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   /* background-size: 100%; */
   /* opacity: 0.8; */
-  height: 100vh;
+  height: 50vh;
 }
 
 .main_name {
@@ -34,7 +34,7 @@
   opacity: 1;
   font-family: Poppins;
   font-weight: 500;
-  position: relative;
+  /* position: relative; */
   bottom: 10px;
   margin-left: 35%;
 }
