--- a/src/pages/Vendas/styles.css
+++ b/src/pages/Vendas/styles.css
@@ -34,7 +34,7 @@
   opacity: 1;
   font-family: Poppins;
   font-weight: 500;
-  /* position: relative; */
+  position: relative;
   bottom: 10px;
   margin-left: 35%;
 }
@@ -46,5 +46,39 @@
   /* float: right; */
   left: 50%;
   /* margin-left: 20opx; n rolou*/
+}
 
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background: #0c0c0c;
+}
+
+.footer_sociais {
+  padding: 3px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.footer_logo {
+  text-align: center;
+}
+
+.footer_img {
+  max-width: 60%;
+  margin-bottom: 0;}
+
+.footer_icone_a {
+  text-decoration:none;
+  color: white;
+  font-family: Poppins;
+  font-size: 15px;
+}
+
+.footer_icone_strong {
+  margin-left: 7px;
 }
