--- a/src/pages/Vendas/styles.css
+++ b/src/pages/Vendas/styles.css
@@ -1,7 +1,7 @@
 .main {
   background: url('../../images/fundo2.jpg') no-repeat;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: column;
   /* background-size: 100%; */
   /* opacity: 0.8; */
