--- a/src/pages/Vendas/styles.css
+++ b/src/pages/Vendas/styles.css
@@ -8,7 +8,7 @@
   height: 50vh;
 }
 
-.main_name {
+.main_name_h1 {
   color: white;
   opacity: 1;
   font-family: Roboto;
@@ -29,6 +29,11 @@
   margin-left: 10%;
 }
 
+.main_logo {
+  /* display: flex; */
+  /* justify-content: center; */
+}
+
 .main_adv {
   color: white;
   opacity: 1;
@@ -39,7 +44,7 @@
   margin-left: 35%;
 }
 
-.main_logo {
+.main_logo_img {
   border-radius: 20px;
   position: relative;
   width: 20%;
