--- a/src/pages/Vendas/styles.css
+++ b/src/pages/Vendas/styles.css
@@ -40,8 +40,11 @@
   font-family: Poppins;
   font-weight: 500;
   position: relative;
+  top: 10px;
+  margin-left: 10%;
+  /* position: relative;
   bottom: 10px;
-  margin-left: 35%;
+  margin-left: 35%; */
 }
 
 .main_logo_img {
